# bnn

./: CMakeLists.txt
include/: common.hpp  layer.hpp  net.hpp
src/: layer.cpp  main.cpp  net.cpp
